# HMI_CBZ

./: README.md  main.py  pyproject.toml  qrc.qrc  rc_qrc.py  requirements.txt
.qtcreator/: pyproject.toml.user.aSqAGd
.qtcreator/3_12_7venv/: pyvenv.cfg
database_files/database_users/: Users.db
projects/BENNINGHOVEN/: AAAAAAAAAAAAAAAAA.json  asd.json  hasdfkdf.json
projects/Euromix4000/: EUROMIX 4000 ном.уст. AZ-456-4564 инв.ном.json  EUROMIX.json
python/py_auth_menager/: auth_menager.py
python/py_bus_manager/: bus_manager.py
python/py_data_base/: __init__.py  database_connect.py  db_manager.py  db_menager.py
python/py_menager_theme/: menager_theme.py
python/py_project_manager/: project_manager.py
python/py_register_component_logic_map/: register_component_logic_map.py
python/py_register_component_object/: RegisterComponentObject.py  register_component_object.py
python/py_settings_project/: settings_project.py
qml/busManager/: ConnectionManager.qml  QmlBusManager.qml  ReactiveElement.qml  qmldir
qml/content/: qmldir
qml/managers/: QmlLogicMapScene.qml  QmlProjectManager.qml  QmlRegisterComponentObject.qml  QmlSceneLogicManager.qml  QmlSceneManager.qml  qmldir
qml/menager_windows/: qmldir
qml/registers/: QmlRegisterComponentLogicMap.qml  QmlRegisterComponentObject.qml  qmldir
qml/registration/: RegistrationWindow.qml  qmldir
qml/registration_window/: RegistrationWindow.qml
qml/splesh_screen/: SpleshScreen.qml  qmldir  splesh_screen.qml
qml/system/: QmlBusManager.qml  ReactiveElement.qml  qmldir
res/keys/: public.pem
(+345 files in other folders)
